# agentic-ledger

./: .env  .env.example  .gitignore  DESIGN.md  DOMAIN_NOTES.md  README.md  concurrency_results.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_daemon.py  setup.sh
src/aggregates/: agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py  state.py
src/commands/: handlers.py
src/core/: event_store.py  exceptions.py  schema.sql
src/integrity/: audit_chain.py  gas_town.py
src/mcp/: resources.py  server.py  tools.py
src/models/: events.py
src/projections/: agent_performance.py  application_summary.py  compliance_audit.py  daemon.py  monitoring.py
src/regulatory/: package.py
src/upcasting/: registry.py  upcasters.py
src/utils/: config.py
src/what_if/: projector.py
tests/: conftest.py  test_audit_chain.py  test_concurrency.py  test_database.py  test_event_store.py  test_gas_town.py  test_mcp_lifecycle.py  test_placeholder.py  test_projections.py  test_upcasting.py
