[project]
name = "agentic-ledger"
version = "0.1.0"
description = "Immutable event store for multi-agent AI systems"
authors = [{name = "Tsegay"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# NO package configuration - we'll use PYTHONPATH instead